// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`separator > renders with as correctly 1`] = `"<span data-orientation="horizontal" role="separator" data-slot="root"><!--v-if--><div data-slot="border" class=""></div><!--v-if--><!--v-if--></span>"`;

exports[`separator > renders with avatar correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <div data-slot="container" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></div>
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`separator > renders with class correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root" class="flex-row-reverse">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with color primary correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with decorative correctly 1`] = `
"<div data-orientation="horizontal" role="none" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <div data-slot="container" class=""><span class="iconify i-lucide:image" aria-hidden="true" data-slot="icon"></span></div>
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`separator > renders with label correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <div data-slot="container" class=""><span data-slot="label" class="">+1</span></div>
  <div data-slot="border" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`separator > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with position end correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <div data-slot="container" class=""><span class="iconify i-lucide:image" aria-hidden="true" data-slot="icon"></span></div>
</div>"
`;

exports[`separator > renders with position start correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <div data-slot="container" class=""><span class="iconify i-lucide:image" aria-hidden="true" data-slot="icon"></span></div>
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with type dashed correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with type dotted correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with type solid correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`separator > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="root">
  <!--v-if-->
  <div data-slot="border" class=""></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
